--- a/src/components/TextInput/index.module.css
+++ b/src/components/TextInput/index.module.css
@@ -20,7 +20,7 @@
   font-size: 1rem;
   border-radius: 4px;
   width: 100%;
-  border: 1px solid lightgrey;
+  border: 1px solid #717171;
   box-sizing: border-box;
 }
 
